<resources>
    <string name="app_name">电投绿通</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="t1">向上拖动的图标</string>
    <string name="t2">关闭弹窗的图标</string>
    <string name="t3">站点类型</string>
    <string name="t4">营业状态</string>
    <string name="t5">距离站点位置</string>
    <string name="t6">可用电池数量</string>
    <string name="t7">导航图标</string>
    <string name="t8">导航</string>
    <string name="_0">0星</string>
    <string name="t9">暂无图片</string>
    <string name="t10">顶部消息图标</string>
    <string name="t11">客付图标</string>
    <string name="t12">HELLO商城图标</string>
    <string name="hello_market">换电商城</string>
    <string name="t13">定位图标</string>
    <string name="cd3">返回图标</string>
    <string name="myCar">我的电动车</string>
    <string name="had_no_car">您还没有绑定您的车辆\n请立即绑定</string>
    <string name="gray_car">灰色电动车图标</string>
    <string name="cd4">车辆图标，由后台返回</string>
    <string name="unbind">解绑</string>
    <string name="cd5">守护中</string>
    <string name="cd6">电子围栏图标</string>
    <string name="cd7">电子围栏</string>
    <string name="cd8">实时跟踪图标</string>
    <string name="cd9">实时跟踪</string>
    <string name="cd10">轨迹回放图标</string>
    <string name="cd11">轨迹回放</string>
    <string name="cd12">远程启动</string>
    <string name="cd13">远程启动</string>
    <string name="cd14">远程刹车</string>
    <string name="cd15">远程刹车</string>
    <string name="index">启动页</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="logout">确定要退出登录？</string>
    <string name="camera">拍照</string>
    <string name="album">相册</string>
    <string name="trace">轨迹回放</string>
    <string name="site1">换电站</string>
    <string name="site2">车行</string>
    <string name="site3">综合站</string>
    <string name="site4">便利店</string>
    <string name="site0">全部</string>
    <string name="buy">购买</string>
    <string name="soc1"><![CDATA[<40%]]></string>
    <string name="soc2">40%~60%</string>
    <string name="soc3">60%~90%</string>
    <string name="soc4"><![CDATA[>90%]]></string>
    <string name="usable_battery">可用电池数</string>
    <string name="comments">评论</string>
    <string name="mall">商城</string>
    <string name="the_phone">电话</string>
    <string name="navigation">导航</string>
    <string name="km">%s千米</string>
    <string name="m">%s米</string>
    <string name="immediately_consult">立即咨询</string>
    <string name="call">呼叫</string>
    <string name="content_description1">返回按键</string>
    <string name="evaluation">评价</string>
    <string name="no_evaluation">暂无评价~</string>
    <string name="score">评分：</string>
    <string name="satisfaction">满意程度：</string>
    <string name="submit_comments">提交评论</string>
    <string name="please_input">请输入文字描述……</string>
    <string name="siteinfo_textview3">%s(%s)</string>
    <string name="refresh">刷新</string>
    <string name="goingtorefresh">网络已断开，点击刷新重试~</string>
    <string name="s2020010301">请输入券码</string>
    <string name="s2020010302">立即兑换</string>
    <string name="s2020010601">优惠券码：%s</string>
    <string name="s2020010602">兑换有效期：%s</string>
    <string name="login1">《用户协议》</string>
    <string name="login2">《隐私政策》</string>
    <string name="str_i_got_it">知道了</string>
    <string name="str_see_others">再看看</string>
    <string name="str_to_renew">去续费</string>
    <string name="str_battery">电池</string>
    <string name="str_electric_vehicle">车</string>
    <string name="str_title_message">消息中心</string>
    <string name="str_viewdetails">查看详情</string>
    <string name="str_all_read">全部标记已读</string>
    <string name="str_activity_detail">活动详情</string>
    <string name="str_scan_qr">将二维码/条码放入取景框内\n即可自动扫描</string>
    <string name="str_scan_hint">对准二维码，即可自动扫描识别接收方地址</string>
    <string name="str_error_address">未识别到有效地址信息\n请重新扫描</string>
    <string name="str_splash_agree">欢迎来到吉电出行！为了更好地保护您的权益，在此为您介绍在服务的过程中我们将如何规范安全地收集、存储、保护、使用及对外提供您的信息，请您充分了解：\n\n
·为保障APP稳定运行或提供服务，吉电出行APP需向您申请必要的手机权限，包括读取电话状态权限（用于拨打客服电话）、存储权限（用于扫一扫绑定设备）、定位权限（用于为用户规划合理的换电路线）、蓝牙权限（用于对充电器等硬件进行升级）以及隐私权政策中所列举的其他使用具体功能时所需要申请的权限类型。当您开启权限后，吉电出行APP才会收集必要的信息。\n\n
·为采取风险防范措施保障您的账户及资金安全，并依法履行实名制管理等法定义务，我们需要在必要范围内收集您的身份基本信息、账户信息、交易信息以及设备信息。</string>
    <string name="str_splash_agree_more">更多详情，敬请查阅《吉电出行隐私权政策》全文。我们承诺：将以业界领先的个人信息安全保护水平，全力守护您的信息安全。</string>
    <string name="str_splash_again_agree">我们非常重视对您个人信息的保护，承诺严格按照吉电出行隐私权政策保护及处理您的信息，如不同意该政策，很遗憾我们将无法提供服务</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
