<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/panel_2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button_corners_white_radius_5"
    android:elevation="5dp"
    android:orientation="vertical">
    <!--中间的向上图标及右侧的关闭弹窗红叉叉-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/t1"
            android:src="@drawable/xiangshang" />

        <LinearLayout
            android:id="@+id/page_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/t2"
                android:paddingStart="50dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:src="@drawable/page_close" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp">

            <ImageView
                android:id="@+id/siteInfo_imageView1"
                android:layout_width="48dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/green_battery_frame"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_siteInfo_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/siteInfo_imageView1"
                android:layout_alignTop="@id/siteInfo_imageView1"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:textColor="#00964d"
                android:textSize="36sp"
                tools:text="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/siteInfo_imageView1"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/usable_battery"
                android:textColor="@color/color_757575"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="18dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_siteInfo_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_373737"
                android:textSize="15sp"
                tools:text="北京懋隆产业园站" />

            <TextView
                android:id="@+id/tv_siteInfo_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:drawableStart="@mipmap/gray_clock"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:textColor="@color/color_757575"
                android:textSize="11sp"
                tools:ignore="SmallSp"
                tools:text="0:00-24:00" />

            <TextView
                android:id="@+id/tv_site_info_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:drawableStart="@mipmap/gray_landmarks"
                android:drawablePadding="8dp"
                android:textColor="@color/color_757575"
                android:textSize="11sp"
                tools:ignore="SmallSp"
                tools:text="北京市朝阳区三间房懋隆产业园11栋" />
        </LinearLayout>
    </LinearLayout>

    <com.android.jidian.client.widgets.AlignLeftFlowLayout
        android:id="@+id/siteInfo_flowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="18dp"
        app:height_space="6dp"
        app:width_space="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:background="@color/color_F0F0F0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="6dp"
        android:paddingBottom="6dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/siteInfo_textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="#666666"
                android:textSize="15sp"
                tools:text="1" />

            <TextView
                android:id="@+id/siteInfo_textView6_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/soc1"
                android:textColor="@color/color_666666"
                android:textSize="10sp" />
        </LinearLayout>

        <TextView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/color_F0F0F0" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/siteInfo_textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="#666666"
                android:textSize="15sp"
                tools:text="2" />

            <TextView
                android:id="@+id/siteInfo_textView7_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/soc2"
                android:textColor="@color/color_666666"
                android:textSize="10sp" />
        </LinearLayout>

        <TextView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/color_F0F0F0" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/siteInfo_textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="#00964D"
                android:textSize="15sp"
                tools:text="5" />

            <TextView
                android:id="@+id/siteInfo_textView8_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/soc3"
                android:textColor="@color/color_666666"
                android:textSize="10sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/line_siteInfo_textView9"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/color_F0F0F0" />

        <LinearLayout
            android:id="@+id/li_siteInfo_textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/siteInfo_textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="#00964D"
                android:textSize="15sp"
                tools:text="0" />

            <TextView
                android:id="@+id/siteInfo_textView9_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/soc4"
                android:textColor="@color/color_666666"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/color_F0F0F0" />
    <!--底部viewpager展示图片-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="134dp"
        android:layout_margin="10dp"
        android:background="#E6E6E6">
        <!--没有图片默认图-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/t9"
            android:src="@drawable/no_image"
            tools:visibility="gone" />
        <!--有图片显示viewpager和indicator指示圆点-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/ll_point_container"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:background="#99000000"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="invisible" />
        </FrameLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_EEEEEE"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/btn_site_info_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/orange_circle_icon1"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/comments"
            android:textColor="#666666"
            android:textSize="11sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/btn_site_info_shop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/orange_circle_icon2"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/mall"
            android:textColor="#666666"
            android:textSize="11sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/btn_site_info_mobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/orange_circle_icon3"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/the_phone"
            android:textColor="#666666"
            android:textSize="11sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/btn_site_info_navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/orange_circle_icon4"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:text="@string/navigation"
            android:textColor="#666666"
            android:textSize="11sp"
            tools:ignore="SmallSp" />
    </LinearLayout>
</LinearLayout>